struct T {
  1: i32 separated_name;
  2: i32 separatedName;
}
